--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container"> 
         <div class="image-container">
-            <img class="image" src="images/image-header-mobile.jpg" alt="">
-            <img class="image-desktop" src="images/image-header-desktop.jpg" alt="">
+            <img class="image" src="images/image-header-mobile.jpg" alt="" aria-hidden="true">
+            <img class="image-desktop" src="images/image-header-desktop.jpg" alt="" aria-hidden="true">
         </div>
         <div class="text">
             <h1>Get <span style="color: hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
